--- a/client/style.css
+++ b/client/style.css
@@ -7,7 +7,7 @@ html, body { margin: 0; padding: 0;overflow:hidden;}
   left: 0px;
   width: 100%;
   height: 100%;
-  zoom: reset;
+  transform-origin: 0 0;
 }
 #canvas {
   position: static;
